--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
     <meta charset="UTF-8">
     <title>Front NoSQL</title>
+    <link rel="stylesheet" href="css.css">
 </head>
 <body>
 <nav class="navbar navbar-default">
@@ -49,7 +50,9 @@
     </div><!-- /.container-fluid -->
 </nav>
 <input type="button" onclick="getAllData()" value="GOGOGO">
-
+<div id="cache" class="dnone">
+    <i class="fas fa-spinner"></i>
+</div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" />
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script src="ajax.js"></script>
