--- a/index.html
+++ b/index.html
@@ -21,12 +21,17 @@
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="javascript:toggleFormAjout()">Création</a>
             </li>
         </ul>
     </div>
 </nav>
 <input type="button" onclick="getAllData()" value="GOGOGO">
+
+<form id="formAjout" class="dnone">
+
+</form>
+
 <table id="example" class="table table-striped table-bordered" style="width:100%">
     <thead>
     <tr>
@@ -507,6 +512,10 @@
     </tr>
     </tfoot>
 </table>
+<div id="cache" class="dnone">
+    <i class="fas fa-spinner"></i>
+</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" />
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
