--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         <thead>
         <tr>
             <th>Nom société</th>
-            <th>Pays société</th>
+            <th>Ville société</th>
             <th>Turnover société</th>
             <th>Nom du cms</th>
-            <th>Adresse cms</th>
+            <th>Domaine de la société</th>
         </tr>
         </thead>
         <tbody>
