--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <input type="submit">
 </form>
 
-<div class="container">
+<div class="container" id="containerTable">
     <table id="allData" class="table table-striped table-bordered" style="width:100%">
         <thead>
         <tr>
