--- a/index.html
+++ b/index.html
@@ -28,31 +28,30 @@
     </div>
 </nav>
 
-<input type="button" onclick="getAllData()" value="GOGOGO">
-
-<form id="formAjout" class="dnone" onsubmit="createData(); return false;">
+<form id="formAjout" class="dnone" onsubmit="return createData();">
     <h2>CMS</h2>
-    <label>Nom : <input type="text" name="cms[name]"></label>
-    <label>URL : <input type="text" name="cms[url]"></label>
-    <label>Version : <input type="text" name="cms[version]"></label>
-    <label>Domaine : <input type="text" name="cms[domain]"></label>
-    <label>Actifs : <input type="checkbox" name="cms[isActive]" value="1"></label>
-    <label>Plugins : <input type="text" name="cms[plugin]"></label>
+    <label>Nom : <input type="text" name="cms$$name"></label>
+    <label>URL : <input type="text" name="cms$$url"></label>
+    <label>Version : <input type="text" name="cms$$version"></label>
+    <label>Domaine : <input type="text" name="cms$$domain"></label>
+    <label>Actifs : <input type="checkbox" name="cms$$isActive" value="1"></label>
+    <label>Plugins : <input type="text" name="cms$$plugin"></label>
     <h2>Owner</h2>
-    <label>Mail : <input type="text" name="owner[email]"></label>
-    <label>Prénom : <input type="text" name="owner[firstname]"></label>
-    <label>Nom : <input type="text" name="owner[lastname]"></label>
-    <label>Téléphone : <input type="text" name="owner[phone]"></label>
+    <label>Mail : <input type="text" name="owner$$email"></label>
+    <label>Prénom : <input type="text" name="owner$$firstname"></label>
+    <label>Nom : <input type="text" name="owner$$lastname"></label>
+    <label>Téléphone : <input type="text" name="owner$$phone"></label>
     <h2>Company</h2>
-    <label>Nom : <input type="text" name="company[name]"></label>
-    <label>C.A. : <input type="text" name="company[turnover]"></label>
-    <label>Pays : <input type="text" name="company[pays]"></label>
-    <label>Adresse : <input type="text" name="company[location]"></label>
+    <label>Nom : <input type="text" name="company$$name"></label>
+    <label>C.A. : <input type="text" name="company$$turnover"></label>
+    <label>Pays : <input type="text" name="company$$pays"></label>
+    <label>Adresse : <input type="text" name="company$$location"></label>
 
     <input type="submit">
 </form>
 
 <div class="container" id="containerTable">
+    <input type="button" onclick="getAllData()" value="GOGOGO">
     <table id="allData" class="table table-striped table-bordered" style="width:100%">
         <thead>
         <tr>
