add fontawesome times and fontawesome pencil to the datatable with a div actions as the last th

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             <th>Nom du cms</th>
             <th>Version du cms</th>
             <th>Domaine de la société</th>
+            <th>Actions</th>
         </tr>
         </thead>
         <tbody>
