--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <h2>Company</h2>
     <label>Nom : <input type="text" name="company$$name"></label>
     <label>C.A. : <input type="text" name="company$$turnover"></label>
-    <label>Pays : <input type="text" name="company$$pays"></label>
+    <label>Pays : <input type="text" name="company$$country"></label>
     <label>Adresse : <input type="text" name="company$$location"></label>
 
     <input type="submit">
