--- a/index.html
+++ b/index.html
@@ -69,5 +69,6 @@
 <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
 <script src="bootstrapDatatable.js"></script>
 <script src="dataTableFront.js"></script>
+<script src="https://cdnjs.com/libraries/Chart.js"></script>
 </body>
 </html>
