--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
         </ul>
     </div>
 </nav>
-<canvas id="cmsChart" width="400" height="400"></canvas>
-<button class="btn btn-primary" onClick="loadCmsStats()">Test</button>
+<div class="chart-container" style="position: relative; height:40vh; width:80vw">
+    <canvas id="cmsChart"></canvas>
+</div><button class="btn btn-primary" onClick="loadCmsStats()">Test</button>
 <form id="formAjout" class="row no-gutters dnone" onsubmit="return gestionData();">
     <h2 class="col-lg-11 offset-lg-1">CMS</h2>
     <label class="col-lg-2 offset-lg-1">Nom : <input id="nomCms" class="fright" type="text" name="cms$$name"></label>
