--- a/index.html
+++ b/index.html
@@ -14,21 +14,24 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="javascript:toggleFormAjout()">Création</a>
+            <li class="nav-item">
+                <a class="nav-link active" href="#" onclick="toggleElementSinglePage(this)" data-role="linkNavbar" data-page="accueil">Accueil</a>
             </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="javascript:toggleFormAjout()">Graphiques</a>
+            <li class="nav-item">
+                <a class="nav-link" href="#" onclick="toggleElementSinglePage(this)" data-role="linkNavbar" data-page="form">Création</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" onclick="toggleElementSinglePage(this)" data-role="linkNavbar" data-page="graph">Graphiques</a>
             </li>
         </ul>
     </div>
 </nav>
-<div id="chartDiv" class="chart-container" style="position: relative; height:40vh; width:80vw">
+<div data-role="elementSinglePage" id="chartDiv" class="chart-container" style="position: relative; height:40vh; width:80vw">
     <canvas id="cmsChart"></canvas>
     <button class="btn btn-primary" onClick="loadCmsStats()">Test</button>
 </div>
 
-<form id="formAjout" class="row no-gutters dnone" onsubmit="return gestionData();">
+<form data-role="elementSinglePage" id="formAjout" class="row no-gutters dnone" onsubmit="return gestionData();">
     <h2 class="col-lg-11 offset-lg-1">CMS</h2>
     <label class="col-lg-2 offset-lg-1">Nom : <input id="nomCms" class="fright" type="text" name="cms$$name"></label>
     <label class="col-lg-2 offset-lg-1">URL : <input id="urlCms" class="fright" type="text" name="cms$$url"></label>
@@ -49,7 +52,7 @@
     <input type="submit" class="offset-lg-6">
 </form>
 
-<div class="container" id="containerTable">
+<div data-role="elementSinglePage" class="container" id="containerTable">
     <table id="allData" class="table table-striped table-bordered" style="width:100%">
         <thead>
         <tr>
