--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </ul>
         </div>
     </nav>
-    <div data-role="elementSinglePage" id="chartDiv" class="chart-container"
+    <div data-role="elementSinglePage" id="chartDiv" class="chart-container dnone"
          style="position: relative; height:40vh; width:80vw">
         <canvas id="cmsChart"></canvas>
         <button class="btn btn-primary" onClick="loadCmsStats()">Test</button>
