--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                        data-page="form">Création</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" onclick="toggleElementSinglePage(this)" data-role="linkNavbar"
+                    <a class="nav-link" href="#" onclick="toggleElementSinglePage(this);loadCmsStats();" data-role="linkNavbar"
                        data-page="graph">Graphiques</a>
                 </li>
             </ul>
