--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 </nav>
 <div data-role="elementSinglePage" id="chartDiv" class="chart-container dnone"
      style="position: relative; height:40vh; width:80vw">
+    <h2 style="text-align: center">Répartition des CMS</h2>
     <canvas id="cmsChart"></canvas>
 </div>
 
