--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css.css">
     <meta charset="UTF-8">
     <title>Front NoSQL</title>
+    <link rel="icon" href="img/icone.ico" />
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
